[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rclone_api"
readme = "README.md"
description = "rclone api in python"
requires-python = ">=3.10"
keywords = ["rclone", "api", "python", "fast", "sftp", "s3", "backblaze"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "pyright>=1.1.393",
    "python-dotenv>=1.0.0",
    "certifi>=2025.1.31",
    "psutil",
    "sqlmodel>=0.0.23",
    "psycopg2-binary>=2.9.10",
    "httpx>=0.28.1",
    "download>=0.3.5",
    "appdirs>=1.4.4",
    "beautifulsoup4>=4.13.3",
    "boto3>=1.28.23",
]

# Change this with the version number bump.
version = "1.5.73"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[project.scripts]
rclone-api-listfiles = "rclone_api.cmd.list_files:main"
rclone-api-copylarge-s3 = "rclone_api.cmd.copy_large_s3:main"
rclone-api-profile-mount = "rclone_api.profile.mount_copy_bytes:main"
rclone-api-save-to-db = "rclone_api.cmd.save_to_db:main"
rclone-api-install-bins = "rclone_api.cmd.install_rclone:main"
